--- a/style.css
+++ b/style.css
@@ -1,9 +1,68 @@
+@font-face {
+    font-family: Hammersmith-One;
+    src: url(assets/fonts/HammersmithOne-Regular.ttf);
+}t
+
 .container{
     border-radius: 10px;
     background: white;
+    width: 470px;
+    height: 469px;
+    fill: rgba(163, 228, 233, 0.51);
 }
 
-.fundo{
-    width: 500px;
-    background: #C5E0ED;
+.btn-sign-in{
+    width: 240px;
+    height: 40px;
+    background-color: rgba(0, 74, 173, 0.80);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 5px;
+    margin-top: 350px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.btn-sign-in #sign-in{
+    color: rgba(255, 255, 255, 0.80);
+    text-align: center;
+    font-family: Hammersmith-One;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(0deg, rgba(93, 224, 230, 0.25) 0%, rgba(93, 224, 230, 0.25) 100%), linear-gradient(180deg, #004AAD 0%, rgba(93, 224, 230, 0.82) 58.05%, rgba(0, 74, 173, 0.00) 100%);
+}
+
+.formLogin p {
+    display: inline-block;
+    font-size: 14px;
+    color: #666;
+    margin-bottom: 25px;
+}
+
+.formLogin input {
+    padding: 10px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+    margin-top: 5px;
+    border-radius: 4px;
+    transition: all linear 160ms;
+    outline: none;
+}
+
+.formLogin input:focus {
+    border: 1px solid rgb(0, 74, 173);
+}
+
+.formLogin a:hover {
+    color: #f72585;
 }
