--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
 }
 
+.logo-mindplus {
+    width: 50%;
+    margin: 30px;
+}
+
 .formLogin {
     display: flex;
     flex-direction: column;
@@ -36,7 +41,6 @@
     width: 100%;
     height: 43px;
     margin-bottom: 20px;
-    margin-top: 5px;
     padding: 10px;
     font-size: 14px;
     border: 1px solid #ccc;
@@ -66,26 +70,26 @@
     background-color: rgba(0, 74, 173, 0.80);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 5px;
-    margin-top: 100px;
     padding-top: 8px;
     font-family: Hammersmith-One;
     color: rgba(255, 255, 255, 0.80);
     text-align: center;
     font-size: 16px;
     font-weight: 400;
+    cursor: pointer;
 }
 
-.stay-signed {
+.keep-logged-in {
     font-family: Hammersmith-One;
     color: rgba(0, 0, 0, 0.70);
     align-items: center;
     text-align: center;
+    cursor: pointer;
 }
 
-.stay-signed input {
+.keep-logged-in input {
     width: 15px;
-    align-items: center;
-    margin-bottom: 7px;
-    margin-left: 20px;
-    margin-right: 7px;
+    margin-bottom: 1px;
+    margin-right: 10px;
+    cursor: pointer;
 }
