--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
     font-size: 14px;
     color: #666;
     margin-bottom: 25px;
+    box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
 }
 
 .formLogin input {
