--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 }
 
 .logo-mindplus {
-    width: 50%;
+    max-width: 50%;
     margin: 30px;
 }
 
@@ -66,7 +66,7 @@
     color: #f72585;
 }
 
-#btn-login{
+.btn-blue{
     height: 40px;
     background-color: rgba(0, 74, 173, 0.80);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
@@ -77,11 +77,18 @@
     text-align: center;
     font-size: 16px;
     font-weight: 400;
+}
+
+#btn-login {
+    width: 300px;
+    height: 30px;
+    margin-top: -20px;
     cursor: pointer;
 }
 
 #keep-logged-in {
     font-family: Hammersmith-One;
+    font-size: 15px;
     color: rgba(0, 0, 0, 0.70);
     align-items: center;
     text-align: center;
