--- a/src/style.css
+++ b/src/style.css
@@ -3,9 +3,11 @@
     src: url(assets/fonts/HammersmithOne-Regular.ttf);
 }
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@layer utilities {
+    .content-auto {
+      content-visibility: auto;
+    }
+  }
 
 .page {
     display: flex;
@@ -106,29 +108,3 @@
     cursor: pointer;
 }
 
-.container{
-    display: flex;
-}
-
-.header-logo{
-    height: 50px;
-    margin-left: 100px;
-    align-items: center;
-}
-
-#logo{
-    height: 100px;
-}
-
-header {
-    height: 104px;
-    background-color:  rgba(0, 74, 173, 0.80);
- }
-
- 
- 
-.header-itens li{
-    display: flex;
-    width: 2px;
-}
- 
