--- a/src/pages/homepage.css
+++ b/src/pages/homepage.css
@@ -1,56 +1,62 @@
+
 .my-header {
-  height: 6rem;
+  height: 100px;
+  width: 100%;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
   background-color: rgb(77, 77, 220);
+  font-family: Hammersmith-One;
 }
 
-.header-logo,
-.header-items,
-.header-button {
+.logo {
   display: flex;
-  flex-direction: row;
-  justify-content: start;
   align-items: center;
-}
-
-.header-logo h6 {
+  margin-left: 30px;
   color: white;
+  cursor: pointer;
 }
 
-.header-logo img {
+.logo img {
   width: 50px;
   height: 50px;
 }
 
 .header-items {
-  width: 75%;
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: flex;
+  place-content: center;
+  color: white;
 }
 
-.header-button {
-  width: 200px;
-  color: aliceblue;
+.header-items li {
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  align-items: center;
   cursor: pointer;
+  margin-left: 10%;
 }
 
-.consulta-button {
-  margin-left: -30px;
+.header-items img {
+  margin-right: 10px;
+  width: 17px;
 }
 
 .user-icon {
-  width: 50px;
-  height: 60px;
+  margin-right: 30px;
+  display: flex;
+  align-items: center;
 }
 
-.icon {
-  width: 20px;
-  height: 20px;
-  color: aliceblue;
-  margin-right: 10px;
+.user-icon img {
+  width: 40px;
+  height: 40px;
 }
 
-@media (min-width: 810px) {
+
+/* 
+@media (min-width: 764px) {
   .header-user-button {
     margin-left: 300px !important;
   }
@@ -86,4 +92,4 @@
       display: none;
     }
   }
-  
+   */
