--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@
     border-radius: 7px;
     padding: 40px;
     box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
-    gap: 5px;
     background-color: rgba(163, 228, 233, 0.51);
 }
 
@@ -44,7 +43,6 @@
         border-radius: 7px;
         padding: 20px;
         box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
-        gap: 5px;
         background-color: rgba(163, 228, 233, 0.51);
     }
 }
@@ -90,19 +88,11 @@
     background-color: rgba(0, 74, 173, 0.80);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 5px;
-    padding-top: 8px;
     font-family: Hammersmith-One;
     color: rgba(255, 255, 255, 0.80);
-    text-align: center;
     font-size: 16px;
     font-weight: 400;
-}
-
-#btn-login {
-    width: 300px;
-    height: 30px;
-    margin-top: -20px;
-    cursor: pointer;
+    place-content: center;
 }
 
 #keep-logged-in {
