--- a/src/pages/homepage.css
+++ b/src/pages/homepage.css
@@ -53,43 +53,28 @@
   width: 40px;
   height: 40px;
 }
-
-
-/* 
-@media (min-width: 764px) {
-  .header-user-button {
-    margin-left: 300px !important;
-  }
-
-  .header-logo {
-    width: 200px;
-    padding-left: 30px;
-  }
+ 
+.menu-list{
+  visibility: hidden;
 }
 
-@media (max-width: 809px) {
-  .header-user-button {
-    margin-left: 100px !important;
+@media (max-width: 425px) {
+  .header-items, .user-icon {
+    visibility: hidden;
   }
 
-  .header-logo {
-    width: 100px;
-    padding-left: 10px;
+  #open-modal {
+    font-size: 30px;
+    color: white;
+    display: flex;
+    justify-items: end;
+    justify-content: flex-end;
+    cursor: pointer;
   }
- }
 
-@media (max-width: 500px) {
-    .header-user-button {
-      margin-left: 10px !important;
-    }
-  
-    .header-logo {
-      width: 100px;
-      padding-left: 10px;
-    }
-  
-    .logo-text {
-      display: none;
-    }
+  .menu-list{
+    visibility: visible;
+    transform: rotate(90deg);
+    font-weight: bold;
   }
-   */
+}
