--- a/style.css
+++ b/style.css
@@ -147,13 +147,13 @@
     margin-bottom: -15px;
 }
 
-.intro{
+.intro {
     background-color: #c2eff1;
-    padding-top: 20px;
-    padding-left: 25px;
-    padding-bottom: 20px;
-    margin-top: 50px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-top: 2%;
+    padding-left: 4%;
+    padding-bottom: 2%;
+    margin-top: 3.5%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 
@@ -162,37 +162,38 @@
 .cards {
     display: flex;
     justify-content: space-around;
-    margin-top: 90px;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-top: 3%;
+    margin-left: 2%;
+    margin-right: 2%;
 
-  }
-  
-  .card { 
+}
+
+.card {
     position: relative;
     width: 550px; /* Largura total do card */
     height: 150px;
     background-color: #cbebeb;
     text-align: center;
     padding: 20px;
-    padding-top: 5%; /* talvez aqui seja util para aumentar o tamanho mais tarde */
-    padding-bottom: 200px; /* Define tamanho do card inf/sup na parte de baixo */
+    padding-top: 3.5%;  /* talvez aqui seja util para aumentar o tamanho mais tarde */
+    padding-bottom: 15%;  /* Define tamanho do card inf/sup na parte de baixo */
     margin: 10px;
     overflow: hidden;
     transition: top 0.3s ease;
     border-bottom-left-radius: 5dvh;
     border-top-right-radius: 5dvh;
-    font-size: 22px; /* ---- Adicionar específico para descrição ----*/
-  }
-  
-  .card:hover {
-    height: 400px; /* Tamanho/altura da transição do card inferior */
-    transition: 0.5s;
-  }
-  
-  .description {
+    font-size: 22px; 
+    box-shadow: 5px 4px 4px rgba(59, 59, 91, 0.492);
+}
+
+.card:hover { /* Hover do card em si */
+    height: 300px; /* Tamanho/altura da transição do card inferior */
+    transition: 0.45s;
+}
+
+.description {
     position: absolute;
-    top: 97%; /* Ajuste do topo do bloco de descrição, nessa % permite aparecer a bordinha inferior do card */
+    top: 97%;  /* Ajuste do topo do bloco de descrição, nessa % permite aparecer a bordinha inferior do card */
     bottom: 0%;
     left: 0;
     width: 100%;
@@ -200,22 +201,26 @@
     transition: top 0.3s ease;
     background-color: #276bc4cc;
     color: white;
-   
-  }
-  
-  .card:hover .description {
-    top: 42%; /* Ajuste para mostrar a descrição abaixo do card */
-  }
+    font-size: medium;
 
-.card i {
+}
 
+.card:hover .description { /* Hover da descrição */
+    top: 40%;
+    /* Ajuste para mostrar a descrição abaixo do card */
+}
+
+.card i { /* Ícone */
     font-size: 80px;
     padding-top: 54px;
     color: #276bc4cc;
 }
 
-
-
+.card:hover i {   /* Hover do ícone */
+    padding-top: 17%;
+    font-size: 115px;
+    transition: 0.2s linear;
+}
 
 
 /* - - - EVENTS - - - */
