--- a/src/pages/homepage.css
+++ b/src/pages/homepage.css
@@ -1,80 +1,86 @@
-
-.my-header {
-  height: 100px;
-  width: 100%;
-  display: flex;
-  background-color: rgb(77, 77, 220);
-  font-family: Hammersmith-One;
-}
-
-.logo {
-  display: flex;
-  align-items: center;
-  margin-left: 30px;
-  color: white;
-  cursor: pointer;
-}
-
-.logo img {
-  width: 50px;
-  height: 50px;
-}
-
-.header-items {
-  width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
-  display: flex;
-  place-content: center;
-  color: white;
-}
-
-.header-items li {
-  width: 100%;
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  margin-left: 10%;
-}
-
-.header-items img {
-  margin-right: 10px;
-  width: 17px;
-}
-
-.user-icon {
-  margin-right: 30px;
-  display: flex;
-  align-items: center;
-}
-
-.user-icon img {
-  width: 40px;
-  height: 40px;
-}
- 
-.menu-list{
-  visibility: hidden;
-}
-
-@media (max-width: 425px) {
-  .header-items, .user-icon {
-    visibility: hidden;
+@media (max-width: 2560px) {
+  .my-header {
+    height: 100px;
+    width: auto;
+    display: flex;
+    background-color: rgb(77, 77, 220);
+    font-family: Hammersmith-One;
   }
 
-  #open-modal {
-    font-size: 30px;
-    color: white;
+  .logo {
     display: flex;
-    justify-items: end;
-    justify-content: flex-end;
+    align-items: center;
+    margin-left: 30px;
+    color: white;
     cursor: pointer;
   }
 
-  .menu-list{
+  .logo img {
+    width: 50px;
+    height: 50px;
+  }
+
+  .header-items {
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    display: flex;
+    place-content: center;
+    color: white;
+  }
+
+  .header-items li {
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    margin-left: 10%;
+  }
+
+  .header-items img {
+    margin-right: 10px;
+    width: 17px;
+  }
+
+  .user-icon {
+    margin-right: 30px;
+    display: flex;
+    align-items: center;
+  }
+
+  .user-icon img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .menu-list {
+    visibility: hidden;
+  }
+}
+
+@media (max-width: 768px) {
+  body {
+    width: auto;
+  }
+
+  .header-items,
+  .user-icon {
+    width: auto;
+    visibility: hidden;
+  }
+
+  .menu-list,
+  #open-modal {
+    font-size: 30px;
+    margin-top: 35px;
+    margin-left: 80%;
+    position: absolute;
     visibility: visible;
     transform: rotate(90deg);
+    color: white;
+    cursor: pointer;
     font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 }
