--- a/style.css
+++ b/style.css
@@ -223,6 +223,66 @@
 }
 
 
+
+
+/* - - - MY EMPLOYEES - - - */
+
+/* Modal */
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+  }
+  .modal-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+  }
+  /* Estilos para o botão de editar */
+  .edit-button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+
+  .my-emp-btn{
+    position: relative;
+    width: 85%;
+    height: 15vh;
+    transform: translate(10%, 20%);
+    margin-bottom: 1%;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+  }
+
+
+
+
+
+
+
+
+
+
 /* - - - EVENTS - - - */
 
 #evn-btn {
@@ -231,3 +291,14 @@
     margin-top: -20px;
     margin-bottom: -15px;
 }
+
+
+
+
+
+
+
+
+
+
+
