--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@
 }
 
 
-/* - - - EMPLOYEES - - - */
+/* - - - 2 EMPLOYEES - - - */
 
 
 /* header btn e intro */
@@ -222,10 +222,34 @@
     transition: 0.2s linear;
 }
 
+/* - - - 2.1 CHART - - - */
+
+/* - - - 2.2 GOALS - - - */
+
+.goal-1-b{
+    background-color: #c2eff1 ;
+    
+}
+
+.goal-1{
+    background-color: #f1e730 ;
+    
+}
+
+.goal-2{
+    background-color: #fff ;
+
+}
+
+.goal-3{
+    background-color: #fff ;
+
+}
 
 
 
-/* - - - MY EMPLOYEES - - - */
+
+/* - - - 2.3 MY EMPLOYEES - - - */
 
 /* Modal */
 
