--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Hammersmith-One;
-    src: url(assets/fonts/HammersmithOne-Regular.ttf);
+    src: url(../assets/fonts/HammersmithOne-Regular.ttf);
 }
 
 @layer utilities {
