--- a/src/style.css
+++ b/src/style.css
@@ -1,113 +1,76 @@
 @font-face {
-    font-family: Hammersmith-One;
-    src: url(../assets/fonts/HammersmithOne-Regular.ttf);
+  font-family: Hammersmith-One;
+  src: url(../assets/fonts/HammersmithOne-Regular.ttf);
 }
 
-@layer utilities {
-    .content-auto {
-      content-visibility: auto;
-    }
-  }
-
-.page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    width: 100%;
-    height: 100vh;
-    background: linear-gradient(0deg, rgba(93, 224, 230, 0.25) 0%, rgba(93, 224, 230, 0.25) 100%), linear-gradient(180deg, #004AAD 0%, rgba(93, 224, 230, 0.82) 50%, rgba(0, 74, 173, 0.00) 100%);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
+.fundo-banner {
+  background-image: url('../assets/images/sky.jfif');
+  width: 100vw;
+  height: 60vh;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Hammersmith-One;
 }
 
-.logo-mindplus {
-    max-width: 50%;
-    margin: 30px;
+.banner {
+  width: 70%;
+  margin: 70px auto;
+  height: 350px;
+  background-color: #004AAD;
+  z-index: 1;
+  color: white;
+  font-size: 30px;
+  text-align: center;
+  padding: 100px;
 }
 
-.formLogin {
-    display: flex;
-    flex-direction: column;
-    border-radius: 7px;
-    padding: 40px;
-    box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
-    background-color: rgba(163, 228, 233, 0.51);
+.banner img {
+  width: 20px;
+  z-index: 1;
+  display: flex;
 }
 
-@media (max-width: 768px) {
-    .formLogin {
-        width: 300px;
-        display: flex;
-        flex-direction: column;
-        border-radius: 7px;
-        padding: 20px;
-        box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
-        background-color: rgba(163, 228, 233, 0.51);
-    }
+.card {
+  border-color: #004AAD;
+  border-radius: 10px;
 }
 
-.formLogin p {
-    display: inline-block;
-    font-size: 14px;
-    color: #666;
-    margin-bottom: 25px;
-    box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
+.card h1 {
+  min-height: 50px;
+  margin-top: 25px;
+  margin-bottom: 20px;
 }
 
-.formLogin input {
-    width: 100%;
-    height: 43px;
-    margin-bottom: 20px;
-    padding: 10px;
-    font-size: 14px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    transition: all linear 160ms;
-    outline: none;
+.text-card {
+  min-height: 300px;
+  font-size: 20px;
+  margin-bottom: 20px;
 }
 
-.formLogin input:focus {
-    border: 1px solid rgb(0, 74, 173);
+.button-card {
+  height: 40px;
+  width: 80%;
+  margin-bottom: 20px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 5px;
+  color: white;
+  font-family: Hammersmith-One;
+  font-size: 16px;
+  place-content: center;
 }
 
-.formLogin a {
-    display: inline-block;
-    margin-bottom: 20px;
-    font-size: 13px;
-    color: #555;
-    transition: all linear 160ms;
+.button-card:hover {
+  height: 40px;
+  width: 80%;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 5px;
+  color: white;
+  font-family: Hammersmith-One;
+  font-size: 16px;
+  place-content: center;
+  background-color: #3372c4;
+  transition: 0.5s;
 }
-
-.formLogin a:hover {
-    color: #f72585;
-}
-
-.btn-blue{
-    height: 40px;
-    background-color: rgba(0, 74, 173, 0.80);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 5px;
-    font-family: Hammersmith-One;
-    color: rgba(255, 255, 255, 0.80);
-    font-size: 16px;
-    font-weight: 400;
-    place-content: center;
-}
-
-#keep-logged-in {
-    font-family: Hammersmith-One;
-    font-size: 15px;
-    color: rgba(0, 0, 0, 0.70);
-    align-items: center;
-    text-align: center;
-    cursor: pointer;
-}
-
-#keep-logged-in input {
-    width: 15px;
-    margin-bottom: 1px;
-    margin-right: 10px;
-    cursor: pointer;
-}
-
