Ajuste de conflito

--- a/style.css
+++ b/style.css
@@ -65,35 +65,6 @@
     color: #f72585;
 }
 
-#btn-login {
-    height: 40px;
-    background-color: rgba(0, 74, 173, 0.80);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    border-radius: 5px;
-    padding-top: 8px;
-    font-family: Hammersmith-One;
-    color: rgba(255, 255, 255, 0.80);
-    text-align: center;
-    font-size: 16px;
-    font-weight: 400;
-    cursor: pointer;
-}
-
-#keep-logged-in {
-    font-family: Hammersmith-One;
-    color: rgba(0, 0, 0, 0.70);
-    align-items: center;
-    text-align: center;
-    cursor: pointer;
-}
-
-#keep-logged-in input {
-    width: 15px;
-    margin-bottom: 1px;
-    margin-right: 10px;
-    cursor: pointer;
-}
-
 /* - O - O - O - ADMIN HEADER - O - O - O - */
 
 .adm-header {
@@ -170,30 +141,36 @@
 
 .card {
     position: relative;
-    width: 550px; /* Largura total do card */
+    width: 550px;
+    /* Largura total do card */
     height: 150px;
     background-color: #cbebeb;
     text-align: center;
     padding: 20px;
-    padding-top: 3.5%;  /* talvez aqui seja util para aumentar o tamanho mais tarde */
-    padding-bottom: 15%;  /* Define tamanho do card inf/sup na parte de baixo */
+    padding-top: 3.5%;
+    /* talvez aqui seja util para aumentar o tamanho mais tarde */
+    padding-bottom: 15%;
+    /* Define tamanho do card inf/sup na parte de baixo */
     margin: 10px;
     overflow: hidden;
     transition: top 0.3s ease;
     border-bottom-left-radius: 5dvh;
     border-top-right-radius: 5dvh;
-    font-size: 22px; 
+    font-size: 22px;
     box-shadow: 5px 4px 4px rgba(59, 59, 91, 0.492);
 }
 
-.card:hover { /* Hover do card em si */
-    height: 300px; /* Tamanho/altura da transição do card inferior */
+.card:hover {
+    /* Hover do card em si */
+    height: 300px;
+    /* Tamanho/altura da transição do card inferior */
     transition: 0.45s;
 }
 
 .description {
     position: absolute;
-    top: 97%;  /* Ajuste do topo do bloco de descrição, nessa % permite aparecer a bordinha inferior do card */
+    top: 97%;
+    /* Ajuste do topo do bloco de descrição, nessa % permite aparecer a bordinha inferior do card */
     bottom: 0%;
     left: 0;
     width: 100%;
@@ -205,18 +182,21 @@
 
 }
 
-.card:hover .description { /* Hover da descrição */
+.card:hover .description {
+    /* Hover da descrição */
     top: 40%;
     /* Ajuste para mostrar a descrição abaixo do card */
 }
 
-.card i { /* Ícone */
+.card i {
+    /* Ícone */
     font-size: 80px;
     padding-top: 54px;
     color: #276bc4cc;
 }
 
-.card:hover i {   /* Hover do ícone */
+.card:hover i {
+    /* Hover do ícone */
     padding-top: 17%;
     font-size: 115px;
     transition: 0.2s linear;
@@ -226,23 +206,23 @@
 
 /* - - - 2.2 GOALS - - - */
 
-.goal-1-b{
-    background-color: #c2eff1 ;
-    
-}
-
-.goal-1{
-    background-color: #f1e730 ;
-    
-}
-
-.goal-2{
-    background-color: #fff ;
+.goal-1-b {
+    background-color: #c2eff1;
 
 }
 
-.goal-3{
-    background-color: #fff ;
+.goal-1 {
+    background-color: #f1e730;
+
+}
+
+.goal-2 {
+    background-color: #fff;
+
+}
+
+.goal-3 {
+    background-color: #fff;
 
 }
 
@@ -264,8 +244,9 @@
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     z-index: 1000;
-  }
-  .modal-overlay {
+}
+
+.modal-overlay {
     display: none;
     position: fixed;
     top: 0;
@@ -274,29 +255,30 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 999;
-  }
-  /* Estilos para o botão de editar */
-  .edit-button {
+}
+
+/* Estilos para o botão de editar */
+.edit-button {
     background-color: #007bff;
     color: #fff;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-  }
+}
 
 
-  .my-emp-btn{
+.my-emp-btn {
     position: relative;
     width: 85%;
     height: 15vh;
     transform: translate(10%, 20%);
     margin-bottom: 1%;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-  }
+}
 
 
 
@@ -315,14 +297,3 @@
     margin-top: -20px;
     margin-bottom: -15px;
 }
-
-
-
-
-
-
-
-
-
-
-
