--- a/style.css
+++ b/style.css
@@ -65,6 +65,35 @@
     color: #f72585;
 }
 
+#btn-login {
+    height: 40px;
+    background-color: rgba(0, 74, 173, 0.80);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 5px;
+    padding-top: 8px;
+    font-family: Hammersmith-One;
+    color: rgba(255, 255, 255, 0.80);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    cursor: pointer;
+}
+
+#keep-logged-in {
+    font-family: Hammersmith-One;
+    color: rgba(0, 0, 0, 0.70);
+    align-items: center;
+    text-align: center;
+    cursor: pointer;
+}
+
+#keep-logged-in input {
+    width: 15px;
+    margin-bottom: 1px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
 /* - O - O - O - ADMIN HEADER - O - O - O - */
 
 .adm-header {
