--- a/usuario/usuario.css
+++ b/usuario/usuario.css
@@ -9,8 +9,9 @@
 }
 
 .user-info img {
+    width: 100px;
     border-radius: 90px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .user-info h1 {
@@ -38,58 +39,65 @@
 .info-grid2 {
     display: flex;
     flex-direction: column;
- }
+}
 
 .info-grid2 h2 {
     margin-top: 30px;
     margin-left: 100px;
 }
 
-@media (max-width: 414px) {
+@media (max-width: 430px) {
     .user-page {
         background-color: aliceblue;
+        display: flex;
+        height: 400px;
     }
-    
-    
+
     .user-info {
-        width: 100px;
+        width: 50px;
         margin: 50px;
+
     }
-    
+
     .user-info img {
+        width: 50px;
+        align-items: center;
         border-radius: 90px;
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     }
-    
+
     .user-info h1 {
         text-align: center;
-    
+        font-size: 10px;
     }
-    
+
     .user-data {
-        display: flex;
-        width: 100%;
-        height: 210px;
+        width: 100px;
+        height: 300px;
+        flex-wrap: wrap;
     }
-    
+
     .info-grid1 {
         display: flex;
         flex-direction: column;
-    
     }
-    
+
     .info-grid1 h2 {
         margin-top: 30px;
         margin-left: 30px;
+        margin-bottom: 0px;
+        width: 430px;
     }
-    
+
     .info-grid2 {
         display: flex;
         flex-direction: column;
-     }
-    
+
+    }
+
     .info-grid2 h2 {
         margin-top: 30px;
-        margin-left: 100px;
+        margin-left: 30px;
+        width: 430px;
     }
 }
