--- a/src/usuario/usuario.css
+++ b/src/usuario/usuario.css
@@ -94,16 +94,16 @@
   .user-page {
     background-color: aliceblue;
     display: flex;
-    height: 400px;
+    height: 500px;
   }
 
   .user-info {
-    width: 50px;
+    width: 80px;
     margin: 50px;
   }
 
   .user-info img {
-    width: 50px;
+    width: 80px;
     align-items: center;
     border-radius: 90px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
@@ -111,7 +111,7 @@
 
   .user-info h1 {
     text-align: center;
-    font-size: 10px;
+    font-size: 15px;
   }
 
   .user-data {
@@ -140,5 +140,30 @@
     margin-top: 30px;
     margin-left: 30px;
     width: 430px;
+  }
+
+  .button-user {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  #button {
+    background: white;
+    padding: 5px;
+    margin-top: 15px;
+    margin-left: 20px;
+    border-radius: 2px;
+    border: 1px solid rgb(193, 215, 228);
+  }
+  
+  #button-save {
+    padding: 5px;
+    margin-top: 15px;
+    margin-left: 20px;
+    color: rgb(255, 255, 255);
+    background: #666;
+    border-radius: 2px;
+    border: 1px solid rgb(193, 215, 228);
   }
 }
