--- a/src/utils/header.css
+++ b/src/utils/header.css
@@ -71,6 +71,7 @@
 
     body {
         padding-top: 100px !important;
+        z-index: -10 !important;
     }
 
     .header-items {
@@ -97,6 +98,7 @@
 
     .menu-lateral-ativo {
         display: block !important;
+        z-index: 10 !important;
     }
 
     .menu-lateral-options,
@@ -110,7 +112,7 @@
         width: 250px;
         height: 100%;
         padding-top: 100px;
-        z-index: 5;
+        z-index: 10 !important;
         background-color: rgba(8, 65, 139);
         display: none;
         font-family: Hammersmith-One;
