--- a/src/homepage/homepage.css
+++ b/src/homepage/homepage.css
@@ -4,70 +4,75 @@
 }
 
 .background-banner {
-  background-image: url('../../assets/images/sky.jfif');
-  width: 100vw;
-  height: 30vh;
-  background-size: cover;
-  background-position: center;
   display: flex;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  background-position: center;
   justify-content: center;
-  align-items: center;
-  place-content: center;
   font-family: Hammersmith-One;
-  margin-bottom: 100px;
+}
+
+.background-banner video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  object-fit: cover;
+  z-index: -1;
 }
 
 .banner {
-  width: 700px;
-  height: 200px;
-  background-color: #004bad2f;
   color: white;
   font-size: 25px;
   place-content: center;
   text-align: center;
-  padding: 50px;
+  padding: 100px;
 }
 
 .banner img {
-  width: 20px;
-  z-index: 1;
   display: flex;
+  width: 15px;
 }
 
 .banner h2 {
-  width: 500px;
-
+  width: 800px;
+  font-size: 25px;
 }
 
 .banner h6 {
-  width: 500px;
-  font-size: 20px;
+  width: 800px;
+  margin-top: 30px;
+  font-size: 15px;
 }
-
 
 .card {
   display: flex;
-  margin-bottom: 50px;
+  height: 450px;
+  padding: 10px;
+   margin-top: 50px;
   border-color: #004bad3a;
   background-color: aliceblue;
   border-radius: 10px;
 }
 
 .card h1 {
-  min-height: 50px;
-  margin-bottom: 20px;
+  min-height: 10px;
+  margin-bottom: 5px;
 }
 
 .card-tittle {
+  height: 10px;
+  margin: 10px;
+  font-size: 20px;
   font-family: Hammersmith-One;
 }
 
 .text-card {
-  min-height: 300px;
-  font-size: 20px;
-  padding: 30px;
-  margin-bottom: 20px;
-  color: #666;
+  min-height: 200px;
+  font-size: 19px;
+  padding: 10px;
+  color: #66666696;
 }
 
 .image-card1 {
@@ -99,32 +104,31 @@
 }
 
 .button-card {
-  height: 40px;
+  height: 50px;
   width: 100%;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  font-family: Hammersmith-One;
-  font-size: 16px;
   place-content: center;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
+  font-family: Hammersmith-One;
+  font-size: 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   color: white;
 }
 
 .button-card:hover {
-  height: 40px;
-  width: 80%;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  border-radius: 5px;
-  color: white;
+  height: 80px;
+  width: 100%;
+  place-content: center;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
   font-family: Hammersmith-One;
   font-size: 16px;
-  place-content: center;
-  background-color: #3372c4;
   transition: 0.5s;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  background-color: rgba(69, 113, 170, 0.881);
 }
 
 @media (max-width: 430px) {
-
   .fundo-banner,
   .banner {
     visibility: hidden;
