--- a/src/utils/header.css
+++ b/src/utils/header.css
@@ -10,7 +10,7 @@
         display: flex;
         background-color: #004AAD;
         font-family: Hammersmith-One;
-        position: fixed;
+        /* position: fixed; */
         top: 0;
     }
 
@@ -70,7 +70,6 @@
 @media (max-width: 430px) {
 
     body {
-        padding-top: 100px !important;
         z-index: -10 !important;
     }
 
@@ -154,21 +153,26 @@
         color: white;
         font-family: Hammersmith-One;
         padding: 30px;
-        margin-top: 300px;
+        margin-top: 100px;
         width: 100%;
         cursor: pointer;
         position: absolute;
+        text-align: right;
     }
 
     #btn-close-menu-lateral:hover {
         color: white;
         font-family: Hammersmith-One;
         padding: 30px;
-        margin-top: 300px;
+        margin-top: 100px;
         width: 100%;
         cursor: pointer;
         position: absolute;
         background-color: rgb(56, 107, 248);
         transition: 1s;
+    }
+
+    #close-menu-lateral img {
+        width: 100px;
     }
 }
