Correções finais no menu lateral da header

--- a/src/homepage/homepage.css
+++ b/src/homepage/homepage.css
@@ -63,15 +63,14 @@
 
 .card-tittle {
   height: 10px;
-  margin: 10px;
+  margin-top: 10px;
   font-size: 20px;
   font-family: Hammersmith-One;
 }
 
 .text-card {
-  min-height: 200px;
-  font-size: 18px;
-  padding-top: 30px;
+  min-height: 250px;
+  padding-top: 32px;
   padding-left: 10px;
   color: #66666696;
 }
@@ -131,8 +130,7 @@
 
 @media (max-width: 430px) {
 
-  .fundo-banner,
-  .banner {
+  .background-banner {
     visibility: hidden;
     max-height: 0;
   }
