--- a/src/homepage/treinamentos.css
+++ b/src/homepage/treinamentos.css
@@ -41,10 +41,10 @@
 }
 
 .card {
- 
   cursor: pointer;
   display: flex;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: rgba(102, 102, 112, 0.805);
 }
 
@@ -80,10 +80,78 @@
   font-size: 20px;
 }
 
-menu video {
+.menu video {
   display: flex;
   align-items: center;
   justify-content: center;
   place-content: center;
 }
 
+@media (max-width: 430px) {
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Ocupa a altura total da tela */
+  }
+
+  .container video {
+    display: none;
+  }
+
+  .center-column {
+    width: 100%;
+    border-radius: 10px;
+    z-index: 2;
+    background-color: aliceblue;
+  }
+
+  .menu {
+    margin-top: 300px;
+    max-width: 430px;
+  }
+
+  .card {
+    display: inline;
+    align-items: center;
+    justify-content: center;
+    place-content: center;
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
+    cursor: pointer;
+    color: rgba(38, 38, 112, 0.805);
+  }
+
+  .card1,
+  .card2 {
+    max-width: 100%; /* Ajusta a largura máxima para ocupar 100% da tela */
+    margin: 10px; /* Adiciona margem entre os cards */
+  }
+
+  .card1 img,
+  .card2 img {
+    width: 100%; /* Faz com que a imagem ocupe 100% da largura do card */
+    height: auto; /* Mantém a proporção da imagem */
+    border-radius: 2px;
+  }
+
+  .card1 h1,
+  .card1 h2,
+  .card2 h1,
+  .card2 h2 {
+    text-align: start;
+  }
+
+  .menu video {
+    align-items: center;
+    justify-content: center;
+    place-content: center;
+  }
+
+  .menu iframe {
+    width: 40vh;
+    height: auto;
+  }
+}
