--- a/src/homepage/treinamentos.css
+++ b/src/homepage/treinamentos.css
@@ -37,7 +37,7 @@
   width: 405px;
   height: 200px;
   margin-top: 50px;
-  border-radius: 2px;
+  border-radius: 10px;
 }
 
 .card {
@@ -45,31 +45,24 @@
   display: flex;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: rgba(102, 102, 112, 0.805);
+  color: rgb(2, 2, 21);
 }
 
 .card1 {
   margin-left: 10px;
 }
 
-.card1 h1 {
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
-.card1 h2 {
-  font-size: 20px;
-}
-
 .card2 {
   margin-left: 70px;
 }
 
+.card1,
 .card2 h1 {
   font-weight: bold;
   margin-bottom: 20px;
 }
 
+.card1,
 .card2 h2 {
   font-size: 20px;
 }
@@ -92,7 +85,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Ocupa a altura total da tela */
+    height: 100vh;
   }
 
   .container video {
@@ -126,14 +119,14 @@
 
   .card1,
   .card2 {
-    max-width: 100%; /* Ajusta a largura máxima para ocupar 100% da tela */
-    margin: 10px; /* Adiciona margem entre os cards */
+    max-width: 100%;
+    margin: 10px;
   }
 
   .card1 img,
   .card2 img {
-    width: 100%; /* Faz com que a imagem ocupe 100% da largura do card */
-    height: auto; /* Mantém a proporção da imagem */
+    width: 100%;
+    height: auto;
     border-radius: 2px;
   }
 
