--- a/src/homepage/treinamentos.css
+++ b/src/homepage/treinamentos.css
@@ -25,15 +25,28 @@
   position: absolute;
   border-radius: 10px;
   z-index: 2;
-  background-color: rgba(203, 224, 242, 0.483);
+  background-color: rgba(203, 224, 242, 0.932);
 }
 
 .menu {
-  width: 1000px;
-  padding: 50px;
+  width: 950px;
+  padding: 20px;
+}
+
+.button-card {
+  height: 30px;
+  width: 20%;
+  cursor: pointer;
+  margin-bottom: 10px;
+  font-family: Hammersmith-One;
+  font-size: 16px;
+  border-color: transparent;
+  filter: drop-shadow(2px 2px 0px rgba(0, 0, 0, 0.25));
+  color: rgb(65, 61, 61);
 }
 
 .menu img {
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
   width: 405px;
   height: 200px;
   margin-top: 50px;
@@ -45,32 +58,41 @@
   display: flex;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: rgb(2, 2, 21);
+  color: rgba(2, 2, 21, 0.541);
 }
 
 .card1 {
   margin-left: 10px;
+  padding-left: 10px;
 }
 
 .card2 {
   margin-left: 70px;
 }
 
-.card1,
-.card2 h1 {
+.card1 h1 {
+  font-size: 20px;
   font-weight: bold;
   margin-bottom: 20px;
 }
 
-.card1,
-.card2 h2 {
+.card2 h1 {
   font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.card1 h2 {
+  font-size: 19px;
+}
+
+.card2 h2 {
+  font-size: 19px;
 }
 
 .menu h1 {
   margin-top: 10px;
   cursor: pointer;
-  font-size: 20px;
 }
 
 .menu video {
@@ -96,12 +118,25 @@
     width: 100%;
     border-radius: 10px;
     z-index: 2;
-    background-color: aliceblue;
+    background-color:#f0f8ff;
   }
 
   .menu {
-    margin-top: 300px;
+    margin-top: 200px;
     max-width: 430px;
+  }
+
+  .button-card {
+    height: 15px;
+    width: 20%;
+    cursor: pointer;
+    margin-bottom: 10px;
+    font-family: Hammersmith-One;
+    font-size: 10px;
+    margin-bottom: 50px;
+    border-color: transparent;
+    filter: drop-shadow(2px 2px 0px rgba(0, 0, 0, 0.25));
+    color: rgb(65, 61, 61);
   }
 
   .card {
@@ -144,7 +179,8 @@
   }
 
   .menu iframe {
-    width: 40vh;
+    padding-left: 22px;
+    width: 38vh;
     height: auto;
   }
 }
