troquei cor metas

--- a/src/utils/style.css
+++ b/src/utils/style.css
@@ -114,7 +114,7 @@
     /* - - - 2.2 GOALS - - - */
 
     .goal-1-b {
-        background-color: #c2eff1;
+        background-color: aliceblue
 
     }
 
